tests/fail/fail_fun_count2.bb
float spike(bool x, int y, float z)
  if x
    say y
    return z * 2.0
  fin
fin

spike(true, 5, 2.3, false)
